[project]
name = "pubmed"
version = "0.1.0"
description = "Fetch research papers from PubMed and filter by pharmaceutical/biotech authors."
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
#...
packages = [
    { include = "main.py" },
]
[tool.poetry.scripts]
get-papers-list = "main:run"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

